layout i helhet funkar. kvar koppla rätt och räkna rätt

--- a/src/css/stylesheet.css
+++ b/src/css/stylesheet.css
@@ -60,6 +60,14 @@ button:hover{
 
 .quiz-container {
 	position: relative;
-	height: 400px;
+	height: 150px;
 	margin-top: 40px;
+}
+
+#kanvinna {
+	height: 200px;
+}
+
+#score {
+	font-size: 35px;
 }
